Fix display issues on small screens. Fixes #161

--- a/skin/style.css
+++ b/skin/style.css
@@ -825,7 +825,6 @@
 #af-wrapper .post-footer-meta {
     display: block;
     width: 100%;
-    height: 20px;
     line-height: 20px;
 }
 #af-wrapper .post-footer a {
